fix(popover-core): update visibility transition easing for fade animation

--- a/packages/core/src/components/popover-core/tds-popover-core.scss
+++ b/packages/core/src/components/popover-core/tds-popover-core.scss
@@ -8,8 +8,8 @@
 }
 
 :host(.tds-popover-animation-fade) {
-  transition: opacity var(--tds-motion-duration-moderate-01) var(--tds-motion-easing-scania);
-  visibility: visibility var(--tds-motion-duration-moderate-01) var(--tds-motion-easing-scania);
+  transition: opacity var(--tds-motion-duration-moderate-01) var(--tds-motion-easing-enter);
+  visibility: visibility var(--tds-motion-duration-moderate-01) var(--tds-motion-easing-enter);
 }
 
 :host(.is-shown) {
